<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yellow_bg"
    tools:context=".features.addnewword.NewWordActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:orientation="vertical"
        android:paddingTop="40dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:text="@string/the_word_in_english"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etNewWord"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/item_background"
            android:hint="@string/the_word"
            android:inputType="text" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="30dp"
            android:paddingBottom="10dp"
            android:text="@string/translation"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etTranslation"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/item_background"
            android:hint="@string/the_translation"
            android:inputType="text" />

        <ImageButton
            android:id="@+id/btnSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="30dp"
            android:background="@null"
            android:src="@drawable/save"
            android:contentDescription="@string/save_word" />

    </LinearLayout>


</LinearLayout>